# AIbot

./: .gitignore  pyproject.toml  run.py
app/: admin.py  generators.py  keyboards.py  states.py  user.py
app/database/: models.py  requests.py
