[tool.poetry]
name = "aibot"
version = "0.1.0"
description = ""
authors = ["Sergulyok <STIFT1997@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
openai = "^1.47.1"
mistralai = "^1.1.0"
aiosqlite = "^0.20.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
